# Project_on_PyCharm

./: .pre-commit-config.yaml  Alina.py  Object_Oriented_Programming.py  function_work.py  main.py  method_string.py  pyproject.toml
Algoritm_in_yandex/: first.py
EX/: EX_4.py  OOP_work_1.py  main_file.py  utils.py  work_3.py
FOR_ME/: LEGB.py  OOP_MY.py  Object_Oriented_Programming.py  method_string.py
LeetCode/: Leetcode_base_1.py
